api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 3  # Adjust the number of replicas as needed for your application
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
        - name: service-api
          image: martingalero/rest-ex:latest
          ports:
            - containerPort: 80
