webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: default
spec:
  selector:
    app: webapp-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
