ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-service
                port:
                  number: 80
